--- a/daten.html
+++ b/daten.html
@@ -48,7 +48,7 @@
 
 <div id="outerstartteaserwrap" class="clearfix">
   <div id="innerstartteaserwrap" class="clearfix">
-	<img style="width: 500px; margin-top: 75px;" src="./ajcon - alexander jahn consulting_files/SQL_Server_Architecture_Explained.jpg" alt="SQL">
+	<img style="width: 500px; margin-top: 75px;" src="./ajcon - alexander jahn consulting_files/image4.jpg" alt="SQL">
     <img style="width: 500px; margin-top: 75px;" src="./ajcon - alexander jahn consulting_files/image2.jpg" alt="html">
     <div class="teaser"></div>
 	</div>
