--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <div id="outerstartteaserwrap" class="clearfix">
   <div id="innerstartteaserwrap" class="clearfix">
-	<img style="width: 500px; margin-top: 75px;" src="./ajcon - alexander jahn consulting_files/SQL_Server_Architecture_Explained.jpg" alt="SQL">
+	<img style="width: 500px; margin-top: 75px;" src="./ajcon - alexander jahn consulting_files/image4.jpg" alt="SQL">
 	<img style="width: 500px; margin-top: 75px;" src="./ajcon - alexander jahn consulting_files/image2.jpg" alt="html">
     <div class="teaser"></div>
 	</div>
@@ -61,10 +61,10 @@
 		  <span class="profil"><a href="https://de.wikipedia.org/wiki/Kommunismus" title="Profil"><img src="./ajcon - alexander jahn consulting_files/alexander-jahn.jpg" alt="Alexander Jahn" class="profilbild"><br>
 	      </a></span>
 					<h2>Wer sind wir&nbsp;</h2>
-					<p>wir sind 1996 im Umfeld des Microsoft SQL Servers als Trainer und Consultant tätig. In den letzten Jahren war ich vorwiegend in Großprojekten tätig. Hierbei habe ich die Kunden in den folgenden Bereichen unterstützt:</p>
-					<h2>Coaching</h2><p>Was verstehe ich unter Coaching?<br><br>Bei den meisten Schulungsanbietern besuchen Sie als Teilnehmer das Seminar und sind nach Beendigung des Kurses auf sich allein gestellt. AJCON-Coaching bietet Ihnen die Möglichkeit, sich nach Ende des Seminars durch einen erfahrenen Trainer (meist der Seminarleiter) individuell auf Ihre Umgebung bezogen betreuen zu lassen. Dabei soll es sich nicht um eine weiterführende Schulung handeln, sondern um eine zeitlich begrenzte Assistenz Ihrer Mitarbeiter (Seminarteilnehmer). Die Dauer der Betreuung bestimmen Sie selbst.<br><br>Natürlich ist Coaching auch ohne Besuch eines Seminares bei AJCON möglich. Eine Anfrage können Sie direkt an mich senden.</p>
+					<p>Wir sind seit 2023 im Umfeld des Microsoft SQL Servers und des Html & Javasrcipt coding als Trainer und Consultant tätig. Wir können die Kunden in den folgenden Bereichen unterstützt:</p>
+					<h2>Coaching</h2><p>Was verstehe ich unter Coaching?<br><br>Bei den meisten Schulungsanbietern besuchen Sie als Teilnehmer das Seminar und sind nach Beendigung des Kurses auf sich allein gestellt. CodeConnect-Coaching bietet Ihnen die Möglichkeit, sich nach Ende des Seminars durch einen erfahrenen Trainer (meist der Seminarleiter) individuell auf Ihre Umgebung bezogen betreuen zu lassen. Dabei soll es sich nicht um eine weiterführende Schulung handeln, sondern um eine zeitlich begrenzte Assistenz Ihrer Mitarbeiter (Seminarteilnehmer). Die Dauer der Betreuung bestimmen Sie selbst.<br><br>Natürlich ist Coaching auch ohne Besuch eines Seminares bei AJCON möglich. Eine Anfrage können Sie direkt an mich senden.</p>
 					<h2>Consulting</h2><p>Ich unterstütze Sie gerne in folgenden Bereichen:</p><ul><li>MS SQL Server Migrationen</li><li>MS SQL Server Skripterstellung</li><li>MS SQL Server Installation und Konfiguration</li><li>MS SQL Server Administration</li><li>Konzepterstellung für kleine, mittlere und Enterprise –Umgebungen </li><li>MS SQL Server Leistungsoptimierung und Problemanalyse</li><li>MS SQL Server Hochverfügbarkeit</li></ul>
-					<h2>Training</h2><ul><li>Sämtliche Schulungen rund um den MS SQL Server</li><li>Prüfungsvorbereitung</li></ul><p>Die Schulungen können in meinen eigenen Schulungsräumen oder bei Ihnen vor Ort durchgeführt werden</p>
+					<h2>Training</h2><ul><li>Sämtliche Schulungen rund um den MS SQL Server</li><li>Html, css</li><li>Html, Javasrcipt</li><li>Prüfungsvorbereitung</li></ul><p>Die Schulungen können in meinen eigenen Schulungsräumen oder bei Ihnen vor Ort durchgeführt werden</p>
 					<h2>Partner</h2><ul><li>ABTIS GmbH</li><li>Macrofactory GmbH</li><li>Microsoft Deutschland GmbH</li></ul>
 					<h2>Referenzkunden</h2><ul><li>Microsoft Deutschland GmbH</li><li>IBM Deutschland GmbH</li><li>LIDL</li><li>Kaufland</li><li>Bosch</li><li>UBS (Schweiz)</li><li>KPMG (Schweiz)</li><li>DigiComp Academy AG (Schweiz)</li></ul>
 					
