--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 	      </a></span>
 					<h2>Wer sind wir&nbsp;</h2>
 					<p>Wir sind seit 2023 im Umfeld des Microsoft SQL Servers und des Html & Javasrcipt coding als Trainer und Consultant tätig. Wir können die Kunden in den folgenden Bereichen unterstützt:</p>
-					<h2>Coaching</h2><p>Was verstehe ich unter Coaching?<br><br>Bei den meisten Schulungsanbietern besuchen Sie als Teilnehmer das Seminar und sind nach Beendigung des Kurses auf sich allein gestellt. CodeConnect-Coaching bietet Ihnen die Möglichkeit, sich nach Ende des Seminars durch einen erfahrenen Trainer (meist der Seminarleiter) individuell auf Ihre Umgebung bezogen betreuen zu lassen. Dabei soll es sich nicht um eine weiterführende Schulung handeln, sondern um eine zeitlich begrenzte Assistenz Ihrer Mitarbeiter (Seminarteilnehmer). Die Dauer der Betreuung bestimmen Sie selbst.<br><br>Natürlich ist Coaching auch ohne Besuch eines Seminares bei AJCON möglich. Eine Anfrage können Sie direkt an mich senden.</p>
+					<h2>Coaching</h2><p>Was verstehe ich unter Coaching?<br><br>Bei den meisten Schulungsanbietern besuchen Sie als Teilnehmer das Seminar und sind nach Beendigung des Kurses auf sich allein gestellt. CodeConnect-Coaching bietet Ihnen die Möglichkeit, sich nach Ende des Seminars durch einen erfahrenen Trainer (meist der Seminarleiter) individuell auf Ihre Umgebung bezogen betreuen zu lassen. Dabei soll es sich nicht um eine weiterführende Schulung handeln, sondern um eine zeitlich begrenzte Assistenz Ihrer Mitarbeiter (Seminarteilnehmer). Die Dauer der Betreuung bestimmen Sie selbst.<br><br>Natürlich ist Coaching auch ohne Besuch eines Seminares bei CodeConnect möglich. Eine Anfrage können Sie direkt an uns senden.</p>
 					<h2>Consulting</h2><p>Ich unterstütze Sie gerne in folgenden Bereichen:</p><ul><li>MS SQL Server Migrationen</li><li>MS SQL Server Skripterstellung</li><li>MS SQL Server Installation und Konfiguration</li><li>MS SQL Server Administration</li><li>Konzepterstellung für kleine, mittlere und Enterprise –Umgebungen </li><li>MS SQL Server Leistungsoptimierung und Problemanalyse</li><li>MS SQL Server Hochverfügbarkeit</li></ul>
-					<h2>Training</h2><ul><li>Sämtliche Schulungen rund um den MS SQL Server</li><li>Html, css</li><li>Html, Javasrcipt</li><li>Prüfungsvorbereitung</li></ul><p>Die Schulungen können in meinen eigenen Schulungsräumen oder bei Ihnen vor Ort durchgeführt werden</p>
-					<h2>Partner</h2><ul><li>ABTIS GmbH</li><li>Macrofactory GmbH</li><li>Microsoft Deutschland GmbH</li></ul>
-					<h2>Referenzkunden</h2><ul><li>Microsoft Deutschland GmbH</li><li>IBM Deutschland GmbH</li><li>LIDL</li><li>Kaufland</li><li>Bosch</li><li>UBS (Schweiz)</li><li>KPMG (Schweiz)</li><li>DigiComp Academy AG (Schweiz)</li></ul>
+					<h2>Training</h2><ul><li>Sämtliche Schulungen rund um den MS SQL Server</li><li>Html, css</li><li>Html, Javasrcipt</li><li>Prüfungsvorbereitung</li></ul><p>Die Schulungen können in unserem Schulungsraum sein, bei Ihnen vor Ort oder auch Online durchgeführt werden</p>
+					<h2>Partner</h2><ul><li>AJCON e.k.</li></ul>
+					<h2>Referenzkunden</h2><ul><li>AJCON e.k.</li><li>KFZ Meisterbetrieb Damjanovic</li></ul>
 					
-					<p>Ich berate Sie gerne! Rufen Sie mich unter Telefon: +49 17640478395 an oder schreiben Sie mir eine E-Mail an <span class="maillink"><a href="mailto:welcome@ajcon.de" title="E-Mail senden">robin.jahn@ajcon.de</a></span><br><br>
+					<p>Wir berate Sie gerne! Rufen Sie uns unter Telefon: +49 17640478395 an oder schreiben Sie uns eine E-Mail an <span class="maillink"><a href="mailto:robin.jahn@ajcon.de" title="E-Mail senden">robin.jahn@ajcon.de</a></span><br><br>
 					</p>
 		</div>	
 	</div>
