--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 	<div id="innerstartcontentwrap" class="clearfix">
 		<div class="content clearfix">
 			<h1>Willkommen bei CodeConnect&nbsp;&nbsp;</h1>
-		  <span class="profil"><a href="https://de.wikipedia.org/wiki/Kommunismus" title="Profil"><img src="./ajcon - alexander jahn consulting_files/alexander-jahn.jpg" alt="Alexander Jahn" class="profilbild"><br>
+		  <span class="profil"><a href="https://de.wikipedia.org/wiki/Kommunismus" title="Profil"><video src="./ajcon - alexander jahn consulting_files/videoplayback.mp4" type="mp4/video" width="500px" autoplay="autoplay" controls="controls"><br>
 	      </a></span>
 					<h2>Wer sind wir&nbsp;</h2>
 					<p>Wir sind seit 2023 im Umfeld des Microsoft SQL Servers und des Html & Javasrcipt coding als Trainer und Consultant tätig. Wir können die Kunden in den folgenden Bereichen unterstützt:</p>
-					<h2>Coaching</h2><p>Was verstehe ich unter Coaching?<br><br>Bei den meisten Schulungsanbietern besuchen Sie als Teilnehmer das Seminar und sind nach Beendigung des Kurses auf sich allein gestellt. CodeConnect-Coaching bietet Ihnen die Möglichkeit, sich nach Ende des Seminars durch einen erfahrenen Trainer (meist der Seminarleiter) individuell auf Ihre Umgebung bezogen betreuen zu lassen. Dabei soll es sich nicht um eine weiterführende Schulung handeln, sondern um eine zeitlich begrenzte Assistenz Ihrer Mitarbeiter (Seminarteilnehmer). Die Dauer der Betreuung bestimmen Sie selbst.<br><br>Natürlich ist Coaching auch ohne Besuch eines Seminares bei CodeConnect möglich. Eine Anfrage können Sie direkt an uns senden.</p>
-					<h2>Consulting</h2><p>Ich unterstütze Sie gerne in folgenden Bereichen:</p><ul><li>MS SQL Server Migrationen</li><li>MS SQL Server Skripterstellung</li><li>MS SQL Server Installation und Konfiguration</li><li>MS SQL Server Administration</li><li>Konzepterstellung für kleine, mittlere und Enterprise –Umgebungen </li><li>MS SQL Server Leistungsoptimierung und Problemanalyse</li><li>MS SQL Server Hochverfügbarkeit</li></ul>
-					<h2>Training</h2><ul><li>Sämtliche Schulungen rund um den MS SQL Server</li><li>Html, css</li><li>Html, Javasrcipt</li><li>Prüfungsvorbereitung</li></ul><p>Die Schulungen können in unserem Schulungsraum sein, bei Ihnen vor Ort oder auch Online durchgeführt werden</p>
+					<h2>Coaching</h2><p>Was verstehen wir unter Coaching?<br><br>Bei den meisten Schulungsanbietern besuchen Sie als Teilnehmer das Seminar und sind nach Beendigung des Kurses auf sich allein gestellt. CodeConnect-Coaching bietet Ihnen die Möglichkeit, sich nach Ende des Seminars durch einen erfahrenen Trainer (meist der Seminarleiter) individuell auf Ihre Umgebung bezogen betreuen zu lassen. Dabei soll es sich nicht um eine weiterführende Schulung handeln, sondern um eine zeitlich begrenzte Assistenz Ihrer Mitarbeiter (Seminarteilnehmer). Die Dauer der Betreuung bestimmen Sie selbst.<br><br>Natürlich ist Coaching auch ohne Besuch eines Seminares bei CodeConnect möglich. Eine Anfrage können Sie direkt an uns senden.</p>
+					<h2>Consulting</h2><p>Ich unterstütze Sie gerne in folgenden Bereichen:</p><ul><li>MS SQL Server Migrationen</li><li>MS SQL Server Skripterstellung</li><li>MS SQL Server Installation und Konfiguration</li><li>MS SQL Server Administration</li><li>Konzepterstellung für kleine, mittlere und Enterprise –Umgebungen </li><li>MS SQL Server Leistungsoptimierung und Problemanalyse</li><li>MS SQL Server Hochverfügbarkeit</li><li>Websiten</li><li>Wirtschaftsinformationstechnik</li></ul>
+					<h2>Training</h2><ul><li>Sämtliche Schulungen rund um den MS SQL Server</li><li>Sämtliche Schulungen rund um Microsoft Produkte (Visual Studio/VSC, Powerpoint, Excel,...)</li><li>Html, css</li><li>Html, Javasrcipt</li><li>Prüfungsvorbereitung</li></ul><p>Die Schulungen können in unserem Schulungsraum sein, bei Ihnen vor Ort oder auch Online durchgeführt werden</p>
 					<h2>Partner</h2><ul><li>AJCON e.k.</li></ul>
 					<h2>Referenzkunden</h2><ul><li>AJCON e.k.</li><li>KFZ Meisterbetrieb Damjanovic</li></ul>
 					
@@ -78,7 +78,7 @@
 <div  id="footerwrap" class="clearfix">
 	<div id="innerfooter" class="clearfix">
 		<footer class="clearfix">
-				<div class="kontakt"><span class="konblock">&nbsp;</span><span style="color:#daac0d;" class="konblock">Musterstraße 1&nbsp;</span><span style="color:#daac0d;" class="konblock">71063 Sindelfingen</span><span style="color:#daac0d;" class="konblock">Tel.: +49 176 40478395</span><span style="color:#daac0d;" class="konblock"><a style="color:#daac0d;"href="mailto:welcome@ajcon.de" title="E-Mail senden">robin.jahn@ajcon.de&nbsp;</a></span></div>
+				<div class="kontakt"><span class="konblock">&nbsp;</span><span style="color:#daac0d;" class="konblock">Musterstraße 1&nbsp;</span><span style="color:#daac0d;" class="konblock">71063 Sindelfingen</span><span style="color:#daac0d;" class="konblock">Tel.: +49 176 40478395</span><span style="color:#daac0d;" class="konblock"><a style="color:#daac0d;"href="mailto:robin.jahn@ajcon.de" title="E-Mail senden">robin.jahn@ajcon.de&nbsp;</a></span></div>
 				<div class="impressum"><a style="color:#daac0d;"href="impressum.html" title="Impressum">Impressum</a> | <a style="color:#daac0d;"href="daten.html" title="Datenschutzerklärung">Datenschutzerklärung</a></div>
 		</footer>
 	</div>
